Signature Panel UI Customization, BlueTooth workflow changes and auto configuration APIs for readers
Signature Panel UI Customization, BlueTooth workflow changes and auto
configuration APIs for readers.

--- a/sampleapp/app/src/main/AndroidManifest.xml
+++ b/sampleapp/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LastTransactionActivity"
+            android:label="@string/last_transaction"/>
+
     </application>
 
 </manifest>
