Support for the new certificate by Digicert

--- a/sampleapp/settings.gradle
+++ b/sampleapp/settings.gradle
@@ -1,1 +1,19 @@
-include ':app', ':emv-anet-sdk'
+include ':app'
+
+dependencyResolutionManagement {
+    repositories {
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        google()
+    }
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+}
+
+def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
+def properties = new Properties()
+
+assert localPropertiesFile.exists()
+localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
