--- a/sampleapp/app/build.gradle
+++ b/sampleapp/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    namespace "authorize.net.inperson_sdk_android"
+    compileSdk 34
 
     defaultConfig {
         applicationId "authorize.net.inperson_sdk_android"
-        minSdkVersion 21
-        targetSdkVersion 27
+        minSdkVersion 29
+        targetSdkVersion 34
         versionCode 2
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,21 +21,33 @@ android {
     packagingOptions{
         exclude 'META-INF/DEPENDENCIES'
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile project(':emv-anet-sdk')
-    compile 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.madgag.spongycastle:prov:1.53.0.0'
-    compile 'org.apache.httpcomponents:httpcore:4.4.1'
-    compile 'org.apache.httpcomponents:httpclient:4.5'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('../emv-anet-sdk/emv-anet-sdk.aar')
+    // Remove old support library dependencies
+    // implementation 'com.android.support:cardview-v7:27.1.1'
+    // implementation 'com.android.support:appcompat-v7:27.1.1'
+    // implementation 'com.android.support:design:27.1.1'
 
+    // Add AndroidX equivalents
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.fragment:fragment:1.3.6'
+
+    implementation 'com.madgag.spongycastle:prov:1.53.0.0'
+    implementation 'org.apache.httpcomponents:httpcore:4.4.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5'
+    implementation 'com.google.code.gson:gson:2.8.8'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'junit:junit:4.12'
 }
