--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    kotlin_version = '1.8.0'
     repositories {
         jcenter()
         maven {
@@ -10,8 +11,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-
+        classpath 'com.android.tools.build:gradle:8.5.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.14'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
